[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/fbi0-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy2.gd" type="Script" id=2]

[sub_resource type="Animation" id=22]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=25]
resource_name = "Run"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 7 ]
}

[sub_resource type="Animation" id=24]
resource_name = "Shoot"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "Shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachine" id=4]
states/Idle/node = SubResource( 26 )
states/Idle/position = Vector2( 773, 157 )
states/Run/node = SubResource( 27 )
states/Run/position = Vector2( 868, 59 )
states/Shoot/node = SubResource( 28 )
states/Shoot/position = Vector2( 668, 59 )
transitions = [ "Idle", "Run", SubResource( 29 ), "Run", "Idle", SubResource( 30 ), "Run", "Shoot", SubResource( 31 ), "Shoot", "Idle", SubResource( 32 ), "Shoot", "Run", SubResource( 33 ), "Idle", "Shoot", SubResource( 34 ) ]
start_node = "Idle"
graph_offset = Vector2( 120, -3 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=5]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 20.8354, 10 )

[sub_resource type="GDScript" id=21]
script/source = "extends Area2D

func _on_HitBoxArea_area_entered(area):
	if area.is_in_group(\"bullet\"):
		get_parent().take_bullet_damage()
"

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 21.5417 )

[node name="Enemy2" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -6, 0 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
hframes = 7
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 22 )
anims/RESET = SubResource( 23 )
anims/Run = SubResource( 25 )
anims/Shoot = SubResource( 24 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 4 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 5 )

[node name="Collider2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 18 )
scale = Vector2( 0.78937, -0.410726 )
shape = SubResource( 16 )

[node name="HitBoxArea" type="Area2D" parent="."]
script = SubResource( 21 )

[node name="HitBox" type="CollisionShape2D" parent="HitBoxArea"]
position = Vector2( 1, 0 )
scale = Vector2( 1.07932, 0.98141 )
shape = SubResource( 1 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="HitBoxArea" to="HitBoxArea" method="_on_HitBoxArea_area_entered"]
